--- a/app/elements/tpa-quick/tpa-quick.html
+++ b/app/elements/tpa-quick/tpa-quick.html
@@ -38,6 +38,17 @@
             width: 400px;
         }
 
+        @media (max-width: 840px) {
+          /* FullScreen when Drawer is shown */
+          tpa-toast-action {
+              position: absolute;
+              bottom: 0px;
+              right: 0px;
+              height: 2800px;
+              width: 2800px;
+          }
+        }
+
         paper-dialog h2 {
             background-color: #0a3142;
             margin: 0;
