--- a/app/index.html
+++ b/app/index.html
@@ -184,7 +184,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               last-response="{{bootstrapResponse}}"></tpa-ajax>
 
 
-    <paper-drawer-panel id="paperDrawerPanel" drawer-width="282px" responsive-width="840px" force-narrow="[[!loggedin]]">
+    <paper-drawer-panel id="paperDrawerPanel" drawer-width="282px" responsive-width="840px" disable-swipe disable-edge-swipe force-narrow="[[!loggedin]]">
         <!-- Drawer Scroll Header Panel -->
         <paper-scroll-header-panel drawer fixed>
 
