fix dialog when swiping left

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -31,6 +31,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
 <link rel="import" href="../bower_components/paper-toast/paper-toast.html">
 <link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../bower_components/paper-dialog/paper-dialog.html">
 
 <!-- TPA elements -->
 <link rel="import" href="../bower_components/tpa-top-bar/tpa-top-bar.html">
