--- a/app/index.html
+++ b/app/index.html
@@ -199,7 +199,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               last-response="{{bootstrapResponse}}"></tpa-ajax>
 
 
-    <paper-drawer-panel id="paperDrawerPanel" drawer-width="282px" responsive-width="840px" disable-swipe disable-edge-swipe force-narrow="[[!loggedin]]">
+    <paper-drawer-panel id="paperDrawerPanel" drawer-width="0px" responsive-width="840px" disable-swipe disable-edge-swipe force-narrow>
         <!-- Drawer Scroll Header Panel -->
         <paper-scroll-header-panel drawer fixed>
 
