Update splash image, make it way smaller

--- a/app/elements/tpa-welcome/tpa-welcome.html
+++ b/app/elements/tpa-welcome/tpa-welcome.html
@@ -107,7 +107,7 @@
 
         <section data-route="splash">
 
-            <img id="image" src="../../images/splash/jongetje.jpg" alt="mobile"/>
+            <img id="image" src="../../images/splash/jongetje2.jpg" alt="mobile"/>
 
             <tpa-container>
 
