--- a/app/elements/tpa-pages/tpa-inbox-page.html
+++ b/app/elements/tpa-pages/tpa-inbox-page.html
@@ -3,9 +3,9 @@
 
 <link rel="import" href="../../bower_components/paper-card/paper-card.html">
 
-<link rel="import" href="../neon-animation/neon-animated-pages.html">
-<link rel="import" href="../neon-animation/animations/slide-left-animation.html">
-<link rel="import" href="../neon-animation/animations/slide-from-right-animation.html">
+<link rel="import" href="../../bower_components/neon-animation/neon-animated-pages.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/slide-left-animation.html">
+<link rel="import" href="../../bower_components/neon-animation/animations/slide-from-right-animation.html">
 
 <dom-module id="tpa-inbox-page">
 
@@ -14,6 +14,7 @@
     </style>
 
     <template>
+
         <neon-animated-pages id="pages" class="flex" selected="0" entry-animation="slide-from-right-animation"
                              exit-animation="slide-left-animation">
 
@@ -23,7 +24,8 @@
 
                     <paper-card style="width: 100%">
                         <paper-listbox>
-                            <tpa-item-action description="Steun de slachtoffers van ... en maak € 10.00 over">
+                            <tpa-item-action
+                                description="Steun de slachtoffers van ... en maak € 10.00 over naar giro 555.">
                                 <paper-button item-button class="primary" on-tap="_steun">Steun giro 555</paper-button>
                             </tpa-item-action>
                         </paper-listbox>
