--- a/app/elements/tpa-welcome/tpa-welcome.html
+++ b/app/elements/tpa-welcome/tpa-welcome.html
@@ -77,16 +77,16 @@
             height: 150px;
         }
 
-
         #text {
-            text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
-            width: 300px;
+
+            width: 600px;
             position: absolute;
             top: 50px;
             left: 50px;
         }
 
         #text #headline {
+            text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
             font-size: 36px;
             color: #FFFFFF;
             margin-bottom: 15px;
@@ -112,8 +112,12 @@
             <tpa-container>
 
                 <div id="text">
-                    <div id="headline">Mobiel betalen: ook iets voor jou?</div>
-                    <div id="subline">Ontdek het gemak</div>
+                    <div id="headline">Met de innovaties van ING</div>
+                    <div id="headline">houdt u de vaart erin</div>
+                    <paper-button class="primary">
+                        <span>Open een rekening in 5 min</span>
+                        <iron-icon icon="chevron-right"></iron-icon>
+                    </paper-button>
                 </div>
 
                 <div id="box">
@@ -154,7 +158,7 @@
                     this.user = user;
                 }.bind(this));
             },
-            login: function(){
+            login: function () {
                 this.$.localstorage.value = true;
                 this.$.localstorage.save();
                 this.$.localstorage.reload();
