Fix broken creditcard content

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -61,8 +61,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/tpa-reactive/tpa-reactive-products.html">
 <link rel="import" href="../bower_components/tpa-reactive/tpa-reactive-user.html">
 
+<link rel="import" href="../bower_components/tpa-content-creditcard/tpa-content-creditcard.html">
+
 <link rel="import" href="tpa-bootstrap-i18n.html">
 <link rel="import" href="./tpa-welcome/tpa-welcome.html">
 <link rel="import" href="./tpa-quick/tpa-quick.html">
 <link rel="import" href="./tpa-container/tpa-container.html">
 <link rel="import" href="./tpa-notification/tpa-notification.html">
+
