Update ismessage page

--- a/app/elements/tpa-bootstrap-i18n.html
+++ b/app/elements/tpa-bootstrap-i18n.html
@@ -52,7 +52,7 @@
                 "Bills": "Rekening",
                 "Transfers": "Overschrijving",
                 "Salary": "Salaris",
-                "DirectDebits": "Domiciliëringen",
+                "DirectDebits": "Incasso's",
                 "MessagesNotifications": "Berichten & Meldingen",
                 "Received": "Ontvangen",
                 "Sent": "Verzonden",
