--- a/app/elements/tpa-pages/tpa-inbox-page.html
+++ b/app/elements/tpa-pages/tpa-inbox-page.html
@@ -49,7 +49,7 @@
                     </paper-card>
                 </template>
               -->
-                <tpa-item-list page="[[page]]"></tpa-item-list>
+                <tpa-item-list page="[[page]]" is-message="[[isMessage]]"></tpa-item-list>
             </section>
 
             <section class="layout vertical">
@@ -66,6 +66,11 @@
                 page: {
                     type: String,
                     notify: true
+                },
+                isMessage: {
+                    type: Boolean,
+                    notify: true,
+                    value: false
                 }
             },
 
